--- a/package.json
+++ b/package.json
@@ -1,18 +1,28 @@
 {
-  "name": "tiktok-backend",
+  "name": "facebook-share-tool",
   "version": "1.0.0",
-  "description": "TikTok search & download backend",
-  "main": "index.js",
+  "description": "Facebook post sharing automation tool",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
+  "keywords": ["facebook", "share", "automation", "tool"],
+  "author": "SHARE",
+  "license": "MIT",
   "dependencies": {
-    "axios": "^1.6.7",
+    "express": "^4.18.2",
+    "axios": "^1.6.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "winston": "^3.11.0",
+    "express-session": "^1.17.3",
+    "cookie-parser": "^1.4.6",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.2"
   }
 }
